--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "@types/nodemailer": "^6.4.15",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.14",
     "winston": "^3.14.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.0",
     "express": "^4.19.2",
